# PickeaTuPC

./: README.md  pyproject.toml
src/pickeatupc/: __main__.py  _config.py  _resources.py  sercoplus.py
src/pickeatupc/_core/: config.py  resources.py
src/pickeatupc/assets/: config.ini
src/pickeatupc/helpers/: get_page.py
src/pickeatupc/models/: _page_number.py  _selectors.py  sercoplus.py
src/pickeatupc/models/sercoplus/: __init__.py  _constants.py  _model.py  _selectors.py
src/pickeatupc/models/sercoplus/_query/: availability.py  base.py  model.py  order.py
