[project]
name = "PickeaTuPC"
version = "0.1.3"
description = "Pickea Tu PC will be a tool to make building your dream computer in Peru simple, quick, and affordable."
authors = [
    {name = "CesarZHX", email = "112836949+CesarZHX@users.noreply.github.com"},
]
dependencies = ["aiohttp==3.12.15", "selectolax==0.3.34", "price-parser==0.4.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest-asyncio==1.2.0",
    "aioresponses==0.7.8",
]
